# hypr-gn-build

./: BUILD.gn  compile_commands.json
src/: JPGHelloWorld.cpp  JPGHelloWorld.h
